--- a/Windows/iqSpeedApp/iqSpeedApp.vcxproj
+++ b/Windows/iqSpeedApp/iqSpeedApp.vcxproj
@@ -152,18 +152,38 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cjson.h" />
+    <ClInclude Include="iperf.h" />
+    <ClInclude Include="iperf_config.h" />
+    <ClInclude Include="iperf_locale.h" />
+    <ClInclude Include="iperf_util.h" />
+    <ClInclude Include="net.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="sys\getopt.h" />
+    <ClInclude Include="sys\time.h" />
+    <ClInclude Include="sys\times.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="windows_port.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cjson.cpp" />
+    <ClCompile Include="dscp.cpp" />
+    <ClCompile Include="iperf_api.cpp" />
+    <ClCompile Include="iperf_auth.cpp" />
+    <ClCompile Include="iperf_client_api.cpp" />
+    <ClCompile Include="iperf_locale.cpp" />
+    <ClCompile Include="iperf_server_api.cpp" />
     <ClCompile Include="iqSpeedApp.cpp" />
+    <ClCompile Include="net.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="sys\time.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
